# crewai-quickstart-tech-trend-agents

./: .gitignore  README.md  agents.py  crew.py  pyproject.toml  requirements.txt  tasks.py  tech_trends_crew.py
